Remove GUI testing